--- a/html_aniball/index.html
+++ b/html_aniball/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container top-image">
-        <img src="A_logo.jpg" alt="picture">
+        <img src="images/A_logo.jpg" alt="picture">
     </div>
     <div class="button-container">
         <a href="https://line.me/S/shop/sticker/author/4981068/top?lang=ja&utm_source=gnsh_staut" class="link-button">LINE STANP</a>
@@ -17,7 +17,7 @@
         <a href="https://cb-j.com" class="link-button">CB JAPAN HP</a>
     </div>
     <div class="image-container bottom-image">
-        <img src="A_chara.jpg" alt="picture">
+        <img src="images/A_chara.jpg" alt="picture">
         
     </div>
 </body>
