--- a/html_aniball/index.html
+++ b/html_aniball/index.html
@@ -14,7 +14,7 @@
         <a href="https://line.me/S/shop/sticker/author/4981068/top?lang=ja&utm_source=gnsh_staut" class="link-button">LINE STANP</a>
         <a href="https://www.instagram.com/aniball.gram?igsh=NDJpbXNqN3Nya2U1&utm_source=qr" class="link-button">Instagram</a>
         <a href="https://cbj-store.com/search?q=アニボール&options%5Bprefix%5D=last" class="link-button">ONLINE STORE</a>
-        <a href="https://photos.app.goo.gl/p6SsLjNjNohs1BqM7" class="link-button">PICTURE</a>
+        <a href="https://photos.app.goo.gl/p6SsLjNjNohs1BqM7" class="link-button">CALENDAR</a>
         <a href="https://cb-j.com" class="link-button">CB JAPAN HP</a>
     </div>
     <div class="image-container bottom-image">
